<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear11"
        android:padding="12dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:hint="@string/Email"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear11"
        android:id="@+id/editId"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:id="@+id/editpass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/editPs"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnlogin"
        android:text="@string/btnLogin"
        android:textStyle="italic"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnregister"
        android:text="@string/register"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        />

  <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/btnregister"
        android:text="@string/btnreset"
        android:id="@+id/btnreset"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forget"
         android:id="@+id/textreset"
         android:padding="4dp"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="italic"
         android:layout_marginTop="25dp"
         android:layout_marginStart="30dp"
         android:layout_gravity="fill_horizontal"
         android:autoLink="all"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>