<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:padding="6dp"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linear1"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="2dp"
        android:layout_marginTop="15dp"
        android:hint="@string/textEmail"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        android:id="@+id/editTextEmail1"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextOldPass2"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail1"
        android:ems="10"

        android:hint="@string/oldpass"
        android:padding="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/editTextNewPass1"

        android:padding="2dp"
        android:layout_marginTop="15dp"
        android:ems="10"

        android:inputType="textPassword"
        android:hint="@string/textnewpass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOldPass1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName1"
        android:padding="2dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:hint="@string/textFirstName"
        android:inputType="textPersonName"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPass1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textcontact1"
            android:ems="10"
            android:padding="2dp"
            android:hint="@string/textContact"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName1"
            android:inputType="phone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/Buttonupdate"
        android:layout_marginTop="15dp"
        android:id="@+id/buttonupdatepas1"
        android:textStyle="italic"
        android:background="@drawable/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcontact"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonrefresh1"
        android:padding="2dp"
        android:text="@string/Buttonrefresh"
        android:layout_marginTop="15dp"
        android:background="@drawable/button2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonupdatepas1"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>