<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editProductCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="fill_horizontal"
                android:hint="@string/productCategory"
                android:inputType="textPersonName"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear1"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="88dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProductCategory"
                app:srcCompat="@android:drawable/ic_notification_overlay"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="16dp" />


            <EditText
                android:id="@+id/editProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="fill_horizontal"
                android:hint="@string/productName"
                android:inputType="textPersonName"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProductCategory"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="88dp" />

            <EditText
                android:id="@+id/editQuant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="fill_horizontal"
                android:hint="@string/quantity"
                android:inputType="textPersonName"
                android:padding="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProductName"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="169dp" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:padding="3dp"
                android:text="@string/addProduct"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editQuant"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="258dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>