<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll1">

            <Button
                android:id="@+id/btnshowProduct"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:textSize="13sp"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:text="@string/show"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear2" />

            <Button
                android:id="@+id/btnAllocation"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:textSize="13sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/alloc"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnshowProduct" />

            <ListView
                android:id="@+id/listview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/colorPrimaryDark"
                android:dividerHeight="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAllocation" />

            <TextView
                android:id="@+id/textviewempty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear2" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>